# Search_Engines

./: CMakeLists.txt  README.md
code/: FixedThreadPool.hpp  Log.hpp  assistance.hpp  auth.hpp  index.hpp  mysql.hpp  parser.cpp  searcher.hpp  server.cpp  thread_pool.hpp
code/search/: search_engine.hpp  suggest.hpp  trie.hpp
log/: log.txt
test/: code.cpp  test
wwwroot/: index.html
